test/zinc_source/compile_errors/collections/03_float_dict_key.zn
// expected-error: dict key cannot be a float

fn main() {
    a = {1.0: "x"}
}
